# Automation_QA_QA_GURU

./: README.md  pyproject.toml
Lesson_1/: test_selen_lesson_1.py
Lesson_10/: conftest.py
Lesson_2/: conftest.py  test_exsample.py  test_fixture.py
Lesson_4/: contributot.py  func_file.py  homework.py
Lesson_5/: lesson_5.py
Lesson_5/test/: conftest.py  test_demo.py  test_google_search.py  test_todo.py
Lesson_8/demoqa_tests/model/controls/: dropdown.py
Lesson_8/demoqa_tests/model/pages/: practice_form.py
Lesson_8/tests/: test_negativ_form_price.py  test_price_form.py
Lessonm_14/framework/: demoqa_with_env.py
Lessonm_14/tests/: conftest.py  test_.py  test_get_user.py  test_get_users_list.py
Lessonm_14/tests/ui/: test_demoshop_authorize.py
home_work_lesson_5/test/: conftest.py  test_tool_qa.py
page_objct_final/demoqa_tests/model/: application_manager.py
page_objct_final/demoqa_tests/model/components/: modal_dialog.py
page_objct_final/demoqa_tests/model/pages/: student_registration_page.py
page_objct_final/demoqa_tests/model/steps/: student_registration_steps.py
page_objct_final/demoqa_tests/utils/: __init__.py  paths.py
page_objct_final/tests/: test_student_registration_form.py
