[tool.poetry]
name = "automation-qa-qa-guru"
version = "0.1.0"
description = ""
authors = ["Dmitriy Sorokin <sorokin.da92@gmail.com>"]
readme = "README.md"
packages = [{include = "automation_qa_qa_guru"}]

[tool.poetry.dependencies]
python = "^3.10"
selene = "^2.0.0rc2"
pytest = "^7.3.1"
pytest-playwright = "^0.3.3"
allure-pytest = "^2.13.2"
voluptuous = "^0.13.1"
pytest-voluptuous = "^1.2.0"
curlify = "^2.2.1"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
